--- a/my-website/package.json
+++ b/my-website/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TannerOates2.github.io/TannerOates2.github.io/", 
+  "homepage": "https://TannerOates2.github.io", 
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
